# gemini-live

./: .gitignore  README.md  api.py  gemini_audio_receiver.py  prd.md  pyproject.toml  user_transcript_prompt.md
code_examples/: Get_started_LiveAPI.py
dev_sandbox.egg-info/: PKG-INFO  SOURCES.txt
gemini_live.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gemini_live_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/: audio-processor.js  index.html  script.js  style.css
